#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-09-33
2016-4-18 David Schneider
- update to pdsdata 8.6.8 with Andor::ConfigV2 JIRA PSAS-229

Tag: V00-09-32
2016-4-14 David Schneider
- add hdf5 support for generic1d PSAS-225

Tag: V00-09-31
2016-4-14 David Schneider
- use new DDL tag method_domain to generated h5schema for ocean optics dataV3

Tag: V00-09-30
2016-4-11 David Schneider
- fix compiler warning
	
Tag: V00-09-29
2016-4-4 David Schneider
- update to pdsdata 8.6.7 but only support UsdUsb::Fex* at this time,
  no support for Generic1D yet - JIRA PSAS-225
- store/read FexConfig by hand to handle the list of strings JIRA PSAS-224

Tag: V00-09-28
2016-2-5 David Schneider
- update to pdsdata 8.6.1 with Andor3d::FrameV1 (and ConfigV1) JIRA PSAS-214

Tag: V00-09-27
2015-12-10 David Schneider
- update to pdsdata 8.4.5 with modified Epix::Config100aV2, and Epix::ElementV3 JIRA PSAS-198

Tag: V00-09-26
2015-6-26 David Schneider
- update to pdsdata 8.3.1 with Epix::Config100aV2, JIRA PSAS-166

Tag: V00-09-25
2015-5-28 David Schneider
- update to pdsdata 8.2.9 with BldDataSpectrometerV1 hproj int32 fix, JIRA PSAS-151
	
Tag: V00-09-24
2015-5-1 David Schneider
- update to pdsdata 8.2.7 with BldDataAnalogInputV1, JIRA PSAS-144

Tag: V00-09-23
2015-2-23 David Schneider
- update to pdsdata 8.2.4 with EvrDataV4 and present function
- forgot to update Changelog with Tag V00-09-22
	
Tag: V00-09-21
2015-2-4 David Schneider
- update psddlc wrapper, JIRA PSAS-103
	
Tag: V00-09-20
2015-2-3 David Schneider
- rewrite ddl_hdf2psana wrapper script to exclude smalldata and take 
  -d for devel types.
- continue to track JIRA PSAS-103.

Tag: V00-09-19